# dnsink

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  blocklist.txt  config.docker.toml  config.toml  demo-queries.sh  fly.toml
.github/workflows/: ci.yml  docker.yml
benches/: dnsink.rs
notes/: v0.3-scope.md
src/: bloom.rs  cdn_whitelist.rs  config.rs  entropy.rs  feeds.rs  lib.rs  main.rs  metrics_server.rs  proxy.rs  ratelimit.rs  trie.rs  tui.rs
tests/: entropy_tests.rs  integration.rs  metrics_tests.rs
