[package]
name = "dnsink"
version = "0.1.0"
edition = "2021"
description = "A high-performance DNS proxy that blocks malware, C2, and phishing at the DNS layer"
authors = ["Joel Libni <kakarot.joel@gmail.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.25"
hickory-resolver = "0.25"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
arc-swap = "1.8.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dnsink"
harness = false
