[package]
name = "dnsink"
version = "0.2.1"
edition = "2021"
description = "A high-performance DNS proxy with threat intelligence, Shannon-entropy tunneling detection, and Prometheus metrics"
authors = ["Joel Libni <kakarot.joel@gmail.com>"]
license = "MIT"
repository = "https://github.com/kakarot-dev/dnsink"
homepage = "https://github.com/kakarot-dev/dnsink"
documentation = "https://docs.rs/dnsink"
readme = "README.md"
keywords = ["dns", "proxy", "security", "malware", "threat-intelligence"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.25"
hickory-resolver = "0.25"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
arc-swap = "1.8.2"
ratatui = "0.29"
crossterm = "0.28"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dnsink"
harness = false
